manifests/jovian-prod/jdownloader/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader-service
  namespace: jovian-prod
spec:
  selector:
    app: jdownloader
  ports:
    - port: 5800
      targetPort: jdownload-http
      protocol: TCP
      name: jdownload-http
